# django-shop

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.docker/: Dockerfile-server  Dockerfile-stripe  compose.yml  run.sh
api/: pagination.py  serializers.py  urls.py  views.py
cart/: cart.py  context_processors.py  forms.py  views.py
cart/templates/cart/: detail.html
coupons/: admin.py  models.py  urls.py  views.py
coupons/migrations/: 0001_initial.py
data/: db.json  shop.json
django_shop/: celery.py  settings.py  urls.py
locale/en/LC_MESSAGES/: django.po
locale/vi/LC_MESSAGES/: django.po
orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_stripe_payment_intent.py  0003_order_coupon_order_discount.py
orders/templates/orders/order/: pdf.html
payment/: tasks.py  urls.py  views.py
payment/templates/payment/: canceled.html  completed.html  process.html
recommendation/: recommender.py
recommendation/management/commands/: seed_products_suggestion.py
shop/: admin.py  models.py  views.py
shop/management/commands/: seed_sample_data.py
shop/migrations/: 0001_initial.py
shop/templates/shop/: base.html
shop/templates/shop/product/: detail.html  list.html
shop/templatetags/: shop_tags.py
